--- a/chat-bot/base_chat.html
+++ b/chat-bot/base_chat.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="chatbox__button">
-            <button><img src="./images/chatbox-icon.svg" /></button>
+            <button><img src="chatbox-icon.svg" /></button>
         </div>
     </div>
 </div>
