nuevas funcionalidades de la app

--- a/main_page.html
+++ b/main_page.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La pateada</title>
-    <link rel="stylesheet" href="style.css">
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap">
-    
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>La Pateada</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a la pateada</h1>
-    </header>
+  <header>
+    <h1>Bienvenido a La Pateada</h1>
+  </header>
 
-    <div class = "intro">
-             <p>
-                Con nuestra aplicación vas a poder reservar canchas de futbol de todo tipo de manera rapida y sencilla, verificando su disponibiliad en segundos.
-            </p>
+  <div class="intro">
+    <p>
+      Reserva canchas fácilmente. Visualiza disponibilidad en tiempo real y haz tu reserva al instante.
+    </p>
+  </div>
 
+  <main class="container">
+    <h2>Selecciona el mapa de disponibilidad</h2>
+    <div style="margin-bottom: 20px;">
+      <button onclick="cambiarMapa(1)">Mapa 1</button>
+      <button onclick="cambiarMapa(2)">Mapa 2</button>
+      <button onclick="cambiarMapa(3)">Mapa 3</button>
+      <button onclick="cambiarMapa(4)">Mapa 4</button>
+      <button onclick="cambiarMapa(5)">Mapa 5</button>
+      <button onclick="cambiarMapa(6)">Mapa 6</button>
+      <button onclick="location.href='reserva.html'">Ir a Reservar</button>
     </div>
-    <main>
-        <div class="container">
+    <iframe id="iframeMapa" src="Canchas sinteticas1.html" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
+  </main>
 
-            <h2>Mapa de las canchas</h2>
-            <p>Este es nuetro mapa interactivo con el cual podras ver la ubicación de las canchas y ver su disponibiliad, si el color de la cancha esta en verde significa que se puede apartar, en caso de estar de color rojo significa   que no puede ser habilitada.</p>
-        </div>
-
-        <!-- Mapa de Canchas -->
-        <iframe src="Canchas sinteticas.html" width="100%" height="600"></iframe>
-
-    </main>
-
+  <script src="script.js"></script>
 </body>
 </html>
+
+
+
 
