--- a/main_page.html
+++ b/main_page.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head >
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>La Pateada</title>
+  
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -18,18 +19,23 @@
   </div>
 
   <main class="container">
-    <h2>Selecciona el mapa de disponibilidad</h2>
+    <h2>Selecciona el mapa según el horario deseado</h2>
     <div style="margin-bottom: 20px;">
-      <button onclick="cambiarMapa(1)">Mapa 1</button>
-      <button onclick="cambiarMapa(2)">Mapa 2</button>
-      <button onclick="cambiarMapa(3)">Mapa 3</button>
-      <button onclick="cambiarMapa(4)">Mapa 4</button>
-      <button onclick="cambiarMapa(5)">Mapa 5</button>
-      <button onclick="cambiarMapa(6)">Mapa 6</button>
-      <button onclick="location.href='reserva.html'">Ir a Reservar</button>
+      <button onclick="cambiarMapa(1)">3 - 4 PM</button>
+      <button onclick="cambiarMapa(2)">4 - 5 PM</button>
+      <button onclick="cambiarMapa(3)">5 - 6 PM</button>
+      <button onclick="cambiarMapa(4)">6 - 7 PM </button>
+      <button onclick="cambiarMapa(5)">7 - 8 PM</button>
+      <button onclick="cambiarMapa(6)">8 - 9 PM</button>
     </div>
     <iframe id="iframeMapa" src="Canchas sinteticas1.html" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
   </main>
+  
+    <section class="container">
+    <h2>Reservar cancha</h2>
+    <p>¿Ya sabes en qué cancha quieres jugar? ¡Reserva ahora mismo con un solo clic!</p>
+    <button class = "btn-reservar" onclick="location.href='http://127.0.0.1:8000/reservar/reserva.html'">Ir a Reservar</button>
+  </section>
 
   <script src="script.js"></script>
 </body>
