--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <button onclick="cambiarMapa(8 , 9)">8 - 9 PM</button>
     </div>
     <iframe id="iframeMapa" src="canchas-sinteticas3-4PM.html" width="100%" height="600px"></iframe>
+    <p class = "intro"><img src="championship (2).png" alt="" width="5%"> Ocupado <img src="championship (1).png" alt="" width="5%"> Disponible   </p>
   </main>
   
     <section class="container">
