--- a/registro/login.html
+++ b/registro/login.html
@@ -1,38 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="style_reserva.css">
+  <link rel="stylesheet" href="style_reserva.css"> <style>
+    body { font-family: sans-serif; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; background-color: #f4f4f4; margin: 0; }
+    .container { background-color: white; padding: 20px 40px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; }
+    h2 { color: #333; margin-bottom: 20px; }
+    input[type="email"], input[type="password"] { width: calc(100% - 22px); padding: 10px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
+    button[type="submit"] { background-color: #5cb85c; color: white; padding: 10px 15px; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; width: 100%; }
+    button[type="submit"]:hover { background-color: #4cae4c; }
+    #response { margin-top: 15px; font-weight: bold; }
+    .success { color: green; }
+    .error { color: red; }
+    .register-link { margin-top: 20px; }
+    .register-link a { color: #007bff; text-decoration: none; }
+    .register-link a:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
-  <h2>Login</h2>
-  <form id="loginForm">
-    <input type="text" id="username" placeholder="Usuario" required><br><br>
-    <input type="password" id="password" placeholder="Contraseña" required><br><br>
-    <button type="submit">Ingresar</button>
-  </form>
-
-  <p id="response"></p>
+  <div class="container">
+    <h2>Iniciar Sesión</h2>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Correo Electrónico" required><br>
+      <input type="password" id="password" placeholder="Contraseña" required><br>
+      <button type="submit">Ingresar</button>
+    </form>
+    <p id="response"></p>
+    <div class="register-link">
+      ¿No tienes cuenta? <a href="register.html">Regístrate aquí</a>
+    </div>
+  </div>
 
   <script>
-    async function login() {
-      const u = document.getElementById('username').value;
-      const p = document.getElementById('password').value;
-      const form = new URLSearchParams();
-      form.append('username', u);
-      form.append('password', p);
+    document.getElementById('loginForm').addEventListener('submit', async function(event) {
+      event.preventDefault();
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      const responseElement = document.getElementById('response');
+      responseElement.textContent = ''; // Limpiar mensajes previos
+      responseElement.className = ''; // Limpiar clases de estilo previas
 
-      const res = await fetch('http://localhost:8000/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-        body: form
-      });
-      const json = await res.json();
-      document.getElementById('response').innerText = json.access_token ? '¡Bienvenido!' : json.detail;
-    }
+      // OAuth2PasswordRequestForm espera los campos como 'username' y 'password'
+      const formData = new URLSearchParams();
+      formData.append('username', email); // Enviamos el email como 'username'
+      formData.append('password', password);
 
-    document.getElementById('loginForm').addEventListener('submit', e => { e.preventDefault(); login(); });
+      try {
+        const res = await fetch('/login', { // Ajusta la URL si tu endpoint de login está en un prefijo (ej: /auth/login)
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/x-www-form-urlencoded'
+          },
+          body: formData
+        });
+
+        const data = await res.json();
+
+        if (res.ok && data.access_token) {
+          responseElement.textContent = '¡Bienvenido, ' + (data.first_name || 'usuario') + '! Redirigiendo...';
+          responseElement.className = 'success';
+          localStorage.setItem('accessToken', data.access_token);
+          localStorage.setItem('userFirstName', data.first_name || ''); // Guardar nombre para mostrarlo
+          
+          // Redirigir a la página principal después de un breve retraso
+          setTimeout(() => {
+            window.location.href = 'index.html'; // Ajusta a tu página principal
+          }, 1500);
+
+        } else {
+          responseElement.textContent = data.detail || 'Error al iniciar sesión. Verifica tus credenciales.';
+          responseElement.className = 'error';
+        }
+      } catch (error) {
+        console.error('Error en el login:', error);
+        responseElement.textContent = 'Ocurrió un error en la conexión. Inténtalo de nuevo.';
+        responseElement.className = 'error';
+      }
+    });
   </script>
 </body>
 </html>
