--- a/main/index.html
+++ b/main/index.html
@@ -17,6 +17,7 @@
         <div id="user-greeting" style="display:none;">
             Hola, <span id="user-name-display"></span>!
             <button id="logout-button">Logout</button>
+            <a id="mis-canchas-link" href="http://127.0.0.1:8000/user/user.html"><button>Mis canchas</button></a>
         </div>
     </div>
   </header>
